2009-08-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* tools/tests/8_funs/f8.c: Use types correctly.

2009-08-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Merge the following changes.

	2009-08-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>
	
	* tools/lib/mtalpha-sim/callgate.s: Simplify. 

	2009-08-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	More support for function calls.
	
	* tools/bin/spp: Try hard to avoid spilling "preserved" registers
	to the frame. Try harder to remove frame setup and restore upon
	end of thread.

	* tools/lib/t-pppalpha/slimpl.m4: Pass function calls directly.
	
	2009-08-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Reduce support to function calls only.

	The previous changes would also rewrite calls to the divide
	routines; but this is not needed any more since the decision was
	made separately to implement a hardware integer divide instead.
	
	* tools/bin/spp: Reinstate the use of t10 and t11 for parameter
	passing.

	* tools/lib/t-pppalpha/include/sl_support.h: Lower the maximum
	number of locals again.

	2009-08-18  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Preliminary support for rewriting function calls in assembly.
	
	* tools/bin/spp,
	* tools/lib/mtalpha-sim/callgate.s,
	* tools/lib/t-pppalpha/include/sl_support.h: New features.

2009-08-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Reinstate the C divide operator.
	
	* tools/bin/cce.in: Enable use of the C divide operator for the
	macros in <svp/div.h> always.

2009-08-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Rebase on later toolchain.

	* deploy/alpha.h.patch,
	* deploy/alpha.md.patch,	
	* deploy/constraints.md.patch: New. These were tested on GCC 4.4x;
	they add support for a special "divide" instruction introduced on
	the MT alpha.

	* deploy/reqs.mk: Apply the patches when installing GCC.

	* deploy/Makefile-reqs.orig: Bump version numbers and change GCC
	mirror.

2009-08-17  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix script `slenv'.
	